cabal-version:      3.0
name:               gl-hf
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Sara Fransson
maintainer:         franssonkai@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable gl-hf
    main-is:          Main.hs

    ghc-options:
      -threaded
      -with-rtsopts=-N
      -Wall
      -Wcompat
      -Wno-name-shadowing

    -- Modules included in this executable, other than Main.
    other-modules:
      Glhf.Camera
      Glhf.Render
      Glhf.Shader
      Glhf.ECS
      Glhf.Env
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      , base
      , containers
      , bytestring
      , GPipe
      , GPipe-GLFW
      , JuicyPixels
      , lens
      , linear
      , text
      , transformers
      , vector
      , wavefront
    hs-source-dirs:   src
    default-language: Haskell2010
